force-app/main/default/objects/Tank_Detail__c/Tank_Detail__c.object-meta.xml
<CustomObject>
    <description>Object to store all tank numbers for a particular Unloading point &amp; product.</description>
    <label>Tank Detail</label>
    <nameField>
        <label>Tank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tank Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>