force-app/main/default/objects/Tank_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tank Detail</relationshipLabel>
    <relationshipName>EC_Tank_Detail</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>