force-app/main/default/objects/Tank_Detail__c/fields/Delivery_Priority__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Priority__c</fullName>
    <label>Delivery Priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>