force-app/main/default/objects/Tank_Detail__c/fields/Delivery_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Template_Code__c</fullName>
    <label>Delivery Template Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>