force-app/main/default/objects/Tank_Detail__c/fields/Material_Delivery_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Delivery_Code__c</fullName>
    <formula>Material_Description__c + &apos;.&apos;+  Delivery_Template_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material &amp; Delivery Code</label>
    <type>Text</type>
</CustomField>