force-app/main/default/objects/Tank_Detail__c/fields/Tank_ID__c.field-meta.xml
<CustomField>
    <fullName>Tank_ID__c</fullName>
    <externalId>true</externalId>
    <label>Tank ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>