force-app/main/default/objects/Tank_Detail__c/fields/Tank_Number__c.field-meta.xml
<CustomField>
    <fullName>Tank_Number__c</fullName>
    <label>Tank Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>