force-app/main/default/objects/Tank_Detail__c/fields/Unloading_Point__c.field-meta.xml
<CustomField>
    <fullName>Unloading_Point__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unloading Point</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>Tank Detail</relationshipLabel>
    <relationshipName>EC_Tank_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>