force-app/main/default/objects/Tank_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Active__c</columns>
    <columns>Tank_ID__c</columns>
    <columns>Tank_Number__c</columns>
    <columns>Delivery_Template_Code__c</columns>
    <columns>Unloading_Point__c</columns>
    <columns>Delivery_Priority__c</columns>
    <columns>Material_Delivery_Code__c</columns>
    <columns>Material_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>